# ai-agent-os

./: .gitignore  Cargo.toml  Dockerfile  PHASE1-COMPLETE.md  PHASE2-INTELLIGENCE-CORE.md  PHASE2B-GUI-INTEGRATION.md  README.md  TESTING-STRATEGY.md  flake.nix  result
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  main.rs  phantom_gate.rs
crates/ai-intelligence/: Cargo.toml
crates/ai-intelligence/src/: anomaly_detector.rs  auto_remediation.rs  decision_engine.rs  knowledge_base.rs  lib.rs  proactive_monitor.rs  state_manager.rs
crates/hyprland-ipc/: Cargo.toml
crates/hyprland-ipc/src/: lib.rs
crates/log-collector/: Cargo.toml
crates/log-collector/src/: lib.rs
crates/system-monitor/: Cargo.toml
crates/system-monitor/src/: lib.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/src/: lib.rs  main.rs
